--- a/_posts/2019-09-25-CSCI-340-lab-4-Part2.markdown
+++ b/_posts/2019-09-25-CSCI-340-lab-4-Part2.markdown
@@ -14,9 +14,9 @@ The header of the Long Haul template displayed an image of a bike.
 ![bike](../../../assets/img/touring.jpg#controlsize)
 
 I replaced this with an image of fractal that I created several years ago.
-![fractal](../../../assets/img/fractal1.bmp#controlsize)
+![fractal](../../../assets/img/fractal1.jpg#controlsize)
 
 I learned two very handy tricks while switching these images.
 1. The "Find in Project" option (ctril+shift+f) was very handy for locating all of the references to the touring.jpg
 
-2. [This article](https://www.xaprb.com/blog/how-to-style-images-with-markdown/) taught me how to use a url fragment (for example: ""/img/fractal1.bmp#controlsize" instead of just ""/img/fractal1.bmp.jpg"). I was then able to add a section to style.css to format items with #controlsize.
+2. [This article](https://www.xaprb.com/blog/how-to-style-images-with-markdown/) taught me how to use a url fragment (for example: ""/img/fractal1.jpg#controlsize" instead of just ""/img/fractal1.jpg"). I was then able to add a section to style.css to format items with #controlsize.
